add arm architecture support

--- a/aur/hdsentinel/PKGBUILD
+++ b/aur/hdsentinel/PKGBUILD
@@ -1,10 +1,11 @@
 # Contributor: János Illés <ijanos@gmail.com>
 # Contributor: Borislav Lilov
+
 pkgname=hdsentinel
 pkgver=0.16
 pkgrel=1
 pkgdesc="A freeware, closed source, SMART analysis tool"
-arch=('i686' 'x86_64')
+arch=('i686' 'x86_64' 'armv6h' 'armv7h')
 url="http://www.hdsentinel.com/hdslin.php"
 license=('unknown')
 depends=()
@@ -16,7 +17,7 @@ elif [[ $CARCH == "x86_64" ]]; then
   source=(http://www.hdsentinel.com/hdslin/hdsentinel-016-x64.tar.gz)
   md5sums=('2ecf56573fcb8a339fc1b2819d1b96a9')
   _HDSentinel="HDSentinel"
-elif [[ $CARCH == "armv7h" ]]; then
+elif [[ $CARCH == "armv7h" || $CARCH == "armv6h" ]]; then
   source=(http://www.hdsentinel.com/hdslin/hdsentinel_008_arm.gz)
   md5sums=('043b51bdad959bac5a73c094abf19472')
   _HDSentinel="hdsentinel_008_arm"
